syntax = "proto3";

package dht.pb;

option csharp_namespace = "Libp2p.Protocols.KadDht.Messages";

// Message types as defined in the libp2p Kademlia DHT spec
enum MessageType {
    PUT_VALUE = 0;
    GET_VALUE = 1;
    ADD_PROVIDER = 2;
    GET_PROVIDERS = 3;
    FIND_NODE = 4;
    PING = 5;
}

// Record represents a stored value in the DHT
message Record {
    // The key that references this record
    bytes key = 1;

    // The actual value this record is storing
    bytes value = 2;

    // Time the record was received, Unix timestamp in seconds
    int64 timeReceived = 3;
}

// Message represents a Kademlia DHT protocol message
message Message {
    // Type of the message
    MessageType type = 1;

    // The key being queried
    bytes key = 2;

    // The record being sent (for PUT_VALUE)
    Record record = 3;

    // A set of peer addresses (for responses)
    repeated Peer closerPeers = 8;

    // Provider records (for ADD_PROVIDER/GET_PROVIDERS)
    repeated Peer providerPeers = 9;

    // Optional value for direct response
    bytes value = 6;

    // Cluster level for the query
    int32 clusterLevel = 7;
}

// ProviderRecord represents a provider of a value
message ProviderRecord {
    // The key this peer is providing
    bytes key = 1;

    // The peer ID of the provider
    bytes providerId = 2;

    // Time the provider record was received
    int64 timeReceived = 3;
}

message Peer {
    bytes id = 1;
    repeated bytes addrs = 2;
    optional int64 connection = 3;
} 